--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola, este es mi sitio web, no me sigas en ningún lugar.
+        Hola, este es mi sitio web, no me sigas en ningún lugar. No quiero saber nada de nadie.
     </p>
 </body>
 </html>
